@@ -1,8 +1,6 @@
 package org.folio.rest.api;
 
 import static org.folio.rest.support.http.InterfaceUrls.alternativeTitleTypesUrl;
-import static org.folio.rest.support.http.InterfaceUrls.authorityNoteTypesUrl;
-import static org.folio.rest.support.http.InterfaceUrls.authoritySourceFilesUrl;
 import static org.folio.rest.support.http.InterfaceUrls.callNumberTypesUrl;
 import static org.folio.rest.support.http.InterfaceUrls.classificationTypesUrl;
 import static org.folio.rest.support.http.InterfaceUrls.contributorNameTypesUrl;
@@ -27,17 +25,15 @@ import static org.folio.utility.ModuleUtility.getClient;
 import static org.folio.utility.ModuleUtility.vertxUrl;
 import static org.folio.utility.RestUtility.TENANT_ID;
 import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.CoreMatchers.notNullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
 
-import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
@@ -46,8 +42,6 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import lombok.SneakyThrows;
 import org.folio.rest.api.entities.AlternativeTitleType;
-import org.folio.rest.api.entities.AuthorityNoteType;
-import org.folio.rest.api.entities.AuthoritySourceFile;
 import org.folio.rest.api.entities.ClassificationType;
 import org.folio.rest.api.entities.ContributorNameType;
 import org.folio.rest.api.entities.ContributorType;
@@ -85,11 +79,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void alternativeTitleTypesLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL apiUrl = alternativeTitleTypesUrl("");
     Response searchResponse = getReferenceRecords(apiUrl);
     validateNumberOfReferenceRecords("alternative title types", searchResponse, 11, 40);
@@ -97,12 +87,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void alternativeTitleTypesBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
-
+    throws InterruptedException, TimeoutException, ExecutionException {
     String entityPath = "/alternative-title-types";
 
     AlternativeTitleType entity =
@@ -122,11 +107,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void callNumberTypesLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL apiUrl = callNumberTypesUrl("");
     Response searchResponse = getReferenceRecords(apiUrl);
     validateNumberOfReferenceRecords("call number types", searchResponse, 5, 40);
@@ -134,11 +115,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void classificationTypesLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL apiUrl = classificationTypesUrl("");
     Response searchResponse = getReferenceRecords(apiUrl);
     validateNumberOfReferenceRecords("classification types", searchResponse, 2, 20);
@@ -146,12 +123,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void classificationTypesBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
-
+    throws InterruptedException, TimeoutException, ExecutionException {
     String entityPath = "/classification-types";
     ClassificationType entity = new ClassificationType("Test classfication type");
     Response postResponse = createReferenceRecord(entityPath, entity);
@@ -166,11 +138,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void contributorNameTypesLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL apiUrl = contributorNameTypesUrl("");
 
     Response searchResponse = getReferenceRecords(apiUrl);
@@ -179,11 +147,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void contributorNameTypesBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     String entityPath = "/contributor-name-types";
     ContributorNameType entity = new ContributorNameType("Test contributor name type", "100");
 
@@ -198,11 +162,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void contributorTypesLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL apiUrl = contributorTypesUrl("");
 
     Response searchResponse = getReferenceRecords(apiUrl);
@@ -211,11 +171,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void contributorTypesBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     String entityPath = "/contributor-types";
     ContributorType entity = new ContributorType("Test contributor type", "Test Code", "Test Source");
 
@@ -230,11 +186,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void electronicAccessRelationshipsLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL apiUrl = electronicAccessRelationshipsUrl("");
 
     Response searchResponse = getReferenceRecords(apiUrl);
@@ -243,11 +195,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void electronicAccessRelationshipsBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     String entityPath = "/electronic-access-relationships";
     ElectronicAccessRelationship entity = new ElectronicAccessRelationship("Test electronic access relationship type");
 
@@ -261,12 +209,38 @@ public class ReferenceTablesTest extends TestBase {
   }
 
   @Test
+  public void canCreateAndGetElectronicAccessRelationshipWithSourceFieldPopulated()
+    throws InterruptedException, TimeoutException, ExecutionException {
+    String entityName = "Electronic access relationship with 'source' field";
+    String entitySource = "Consortium";
+
+    String apiUrl = "/electronic-access-relationships";
+    ElectronicAccessRelationship entity = new ElectronicAccessRelationship(entityName);
+    entity.put("source", entitySource);
+
+    // post new electronic access relationship with 'source' field populated
+    Response postResponse = createReferenceRecord(apiUrl, entity);
+    assertThat(postResponse.getStatusCode(), is(HttpURLConnection.HTTP_CREATED));
+    assertThat(postResponse.getJson().getString("id"), notNullValue());
+    assertThat(postResponse.getJson().getString("name"), is(entityName));
+    assertThat(postResponse.getJson().getString("source"), is(entitySource));
+
+    // get saved electronic access relationship by id and verify all fields have been populated
+    String entityId = postResponse.getJson().getString("id");
+
+    Response getResponse = getById(vertxUrl(apiUrl + "/" + entityId));
+    assertThat(getResponse.getStatusCode(), is(HttpURLConnection.HTTP_OK));
+    assertThat(getResponse.getJson().getString("id"), is(entityId));
+    assertThat(getResponse.getJson().getString("name"), is(entityName));
+    assertThat(getResponse.getJson().getString("source"), is(entitySource));
+
+    // delete created resource
+    deleteReferenceRecordById(vertxUrl(apiUrl + "/" + entityId));
+  }
+
+  @Test
   public void holdingsNoteTypesLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL apiUrl = holdingsNoteTypesUrl("");
 
     Response searchResponse = getReferenceRecords(apiUrl);
@@ -275,11 +249,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void holdingsNoteTypesBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     String entityPath = "/holdings-note-types";
     HoldingsNoteType entity = new HoldingsNoteType("Test holdings note type", "test source");
 
@@ -294,11 +264,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void holdingsTypesLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL apiUrl = holdingsTypesUrl("");
 
     Response searchResponse = getReferenceRecords(apiUrl);
@@ -307,11 +273,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void holdingsTypesBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     String entityPath = "/holdings-types";
     HoldingsType entity = new HoldingsType("Test holdings note type", "test source");
 
@@ -327,11 +289,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void identifierTypesLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL apiUrl = identifierTypesUrl("");
 
     Response searchResponse = getReferenceRecords(apiUrl);
@@ -340,11 +298,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void identifierTypesBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     String entityPath = "/identifier-types";
     IdentifierType entity = new IdentifierType("Test identifier type");
 
@@ -360,11 +314,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void illPoliciesLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL apiUrl = illPoliciesUrl("");
 
     Response searchResponse = getReferenceRecords(apiUrl);
@@ -373,11 +323,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void illPoliciesBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     String entityPath = "/ill-policies";
     IllPolicy entity = new IllPolicy("Test ILL policy", "Test source");
 
@@ -392,11 +338,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void instanceFormatsLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL apiUrl = instanceFormatsUrl("");
 
     Response searchResponse = getReferenceRecords(apiUrl);
@@ -405,11 +347,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void instanceFormatsBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     String entityPath = "/instance-formats";
     InstanceFormat entity = new InstanceFormat("Test instance format", "Test Code", "Test Source");
 
@@ -425,11 +363,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void natureOfContentTermsLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL apiUrl = natureOfContentTermsUrl("");
 
     Response searchResponse = getReferenceRecords(apiUrl);
@@ -438,11 +372,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void natureOfContentTermsBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     String entityPath = "/nature-of-content-terms";
     NatureOfContentTerm entity = new NatureOfContentTerm("Test Term", "Test Source");
 
@@ -458,11 +388,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void instanceStatusesLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL apiUrl = instanceStatusesUrl("");
 
     Response searchResponse = getReferenceRecords(apiUrl);
@@ -471,11 +397,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void instanceStatusesBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     String entityPath = "/instance-statuses";
     InstanceStatus entity = new InstanceStatus("Test instance status", "Test Code", "Test Source");
 
@@ -490,11 +412,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void instanceTypesLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL apiUrl = instanceTypesUrl("");
 
     Response searchResponse = getReferenceRecords(apiUrl);
@@ -503,10 +421,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void instanceTypesBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     String entityPath = "/instance-types";
     InstanceType entity = new InstanceType("Test instance type", "Test Code", "Test Source");
 
@@ -521,10 +436,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void cannotDeleteInstanceTypeAssociatedToAnInstance()
-    throws InterruptedException,
-    ExecutionException,
-    TimeoutException {
-
+    throws InterruptedException, ExecutionException, TimeoutException {
     InstanceType instanceType = new InstanceType("new type", "nt", "rdacontent");
     Response instanceTypeResponse = createReferenceRecord("/instance-types", instanceType);
     assertThat(instanceTypeResponse.getStatusCode(), is(HttpURLConnection.HTTP_CREATED));
@@ -542,11 +454,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void itemNoteTypesLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL apiUrl = itemNoteTypesUrl("");
 
     Response searchResponse = getReferenceRecords(apiUrl);
@@ -555,11 +463,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void itemNoteTypesBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     String entityPath = "/item-note-types";
     ItemNoteType entity = new ItemNoteType("Test item note type", "Test source");
 
@@ -574,11 +478,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void instanceNoteTypesLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL apiUrl = instanceNoteTypesUrl("");
 
     Response searchResponse = getReferenceRecords(apiUrl);
@@ -587,11 +487,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void instanceNoteTypesBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     String entityPath = "/instance-note-types";
     InstanceNoteType entity = new InstanceNoteType("Test instance note type", "Test source");
 
@@ -605,77 +501,8 @@ public class ReferenceTablesTest extends TestBase {
   }
 
   @Test
-  public void authoritySourceFilesLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
-    URL apiUrl = authoritySourceFilesUrl("");
-
-    Response searchResponse = getReferenceRecords(apiUrl);
-    validateNumberOfReferenceRecords("authority source files", searchResponse, 1, 100);
-  }
-
-  @Test
-  public void authoritySourceFilesBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException {
-    String entityPath = "/authority-source-files";
-    AuthoritySourceFile entity = new AuthoritySourceFile("Test authority source file", List.of("test"),
-      "Subjects", "example.com/sources/", "folio");
-
-    Response postResponse = createReferenceRecord(entityPath, entity);
-    assertThat(postResponse.getStatusCode(),
-      is(HttpURLConnection.HTTP_CREATED));
-
-    String entityUuid = postResponse.getJson().getString("id");
-    String updateProperty = AuthoritySourceFile.NAME_KEY;
-
-    testGetPutDeletePost(entityPath, entityUuid, entity, updateProperty);
-  }
-
-  @Test
-  public void authorityNoteTypesLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
-    URL apiUrl = authorityNoteTypesUrl("");
-
-    Response searchResponse = getReferenceRecords(apiUrl);
-    validateNumberOfReferenceRecords("authority note types", searchResponse, 1, 10);
-  }
-
-  @Test
-  public void authorityNoteTypesBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
-    String entityPath = "/authority-note-types";
-    AuthorityNoteType entity = new AuthorityNoteType("Test authority note type", "Test source");
-
-    Response postResponse = createReferenceRecord(entityPath, entity);
-    assertThat(postResponse.getStatusCode(), is(HttpURLConnection.HTTP_CREATED));
-
-    String entityUuid = postResponse.getJson().getString("id");
-    String updateProperty = AuthorityNoteType.NAME_KEY;
-
-    testGetPutDeletePost(entityPath, entityUuid, entity, updateProperty);
-  }
-
-  @Test
   public void modesOfIssuanceLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL apiUrl = modesOfIssuanceUrl("");
 
     Response searchResponse = getReferenceRecords(apiUrl);
@@ -684,11 +511,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void modesOfIssuanceBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     String entityPath = "/modes-of-issuance";
     ModeOfIssuance entity = new ModeOfIssuance("Test mode of issuance");
 
@@ -703,11 +526,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void statisticalCodeTypesLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL statisticalCodeTypesUrl = statisticalCodeTypesUrl("");
 
     Response searchResponseCodeTypes = getReferenceRecords(statisticalCodeTypesUrl);
@@ -716,11 +535,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void statisticalCodesLoaded()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
+    throws InterruptedException, TimeoutException, ExecutionException {
     URL statisticalCodesUrl = statisticalCodesUrl("");
 
     Response searchResponseCodes = getReferenceRecords(statisticalCodesUrl);
@@ -729,12 +544,7 @@ public class ReferenceTablesTest extends TestBase {
 
   @Test
   public void statisticalCodesAndCodeTypesBasicCrud()
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
-
+    throws InterruptedException, TimeoutException, ExecutionException {
     String statisticalCodeTypesPath = "/statistical-code-types";
     String statisticalCodesPath = "/statistical-codes";
 
@@ -792,18 +602,12 @@ public class ReferenceTablesTest extends TestBase {
   }
 
   private Response getReferenceRecords(URL baseUrl)
-    throws InterruptedException,
-    MalformedURLException,
-    TimeoutException,
-    ExecutionException,
-    UnsupportedEncodingException {
-
+    throws InterruptedException, TimeoutException, ExecutionException {
     CompletableFuture<Response> searchCompleted = new CompletableFuture<>();
     String url = baseUrl.toString() + "?limit=400&query="
       + URLEncoder.encode("cql.allRecords=1", StandardCharsets.UTF_8);
     getClient().get(url, TENANT_ID, ResponseHandler.json(searchCompleted));
-    Response searchResponse = searchCompleted.get(10, TimeUnit.SECONDS);
-    return searchResponse;
+    return searchCompleted.get(10, TimeUnit.SECONDS);
   }
 
   private void validateNumberOfReferenceRecords(String dataDescription, Response searchResponse, int min, int max) {
@@ -826,12 +630,10 @@ public class ReferenceTablesTest extends TestBase {
       TENANT_ID,
       ResponseHandler.any(createCompleted)
     );
-    Response postResponse = createCompleted.get(10, TimeUnit.SECONDS);
-    return postResponse;
+    return createCompleted.get(10, TimeUnit.SECONDS);
   }
 
-  private Response getById(URL getByIdUrl)
-    throws MalformedURLException, InterruptedException,
+  private Response getById(URL getByIdUrl) throws InterruptedException,
     ExecutionException, TimeoutException {
 
     CompletableFuture<Response> getCompleted = new CompletableFuture<>();
@@ -839,36 +641,28 @@ public class ReferenceTablesTest extends TestBase {
     getClient().get(getByIdUrl, TENANT_ID,
       ResponseHandler.any(getCompleted));
 
-    Response getByIdResponse = getCompleted.get(10, TimeUnit.SECONDS);
-
-    return getByIdResponse;
+    return getCompleted.get(10, TimeUnit.SECONDS);
   }
 
-  private Response getByQuery(URL getByQueryUrl)
-    throws MalformedURLException, InterruptedException,
+  private Response getByQuery(URL getByQueryUrl) throws InterruptedException,
     ExecutionException, TimeoutException {
     CompletableFuture<Response> getCompleted = new CompletableFuture<>();
 
     getClient().get(getByQueryUrl, TENANT_ID,
       ResponseHandler.any(getCompleted));
 
-    Response getByQueryResponse = getCompleted.get(10, TimeUnit.SECONDS);
-
-    return getByQueryResponse;
-
+    return getCompleted.get(10, TimeUnit.SECONDS);
   }
 
   private Response deleteReferenceRecordById(URL entityUrl)
     throws ExecutionException, InterruptedException, TimeoutException {
-
     CompletableFuture<Response> deleteCompleted = new CompletableFuture<>();
     getClient().delete(
       entityUrl,
       TENANT_ID,
       ResponseHandler.any(deleteCompleted)
     );
-    Response deleteResponse = deleteCompleted.get(10, TimeUnit.SECONDS);
-    return deleteResponse;
+    return deleteCompleted.get(10, TimeUnit.SECONDS);
   }
 
   private Response updateRecord(URL entityUrl, JsonEntity referenceObject)
@@ -880,14 +674,12 @@ public class ReferenceTablesTest extends TestBase {
       TENANT_ID,
       ResponseHandler.any(updateCompleted)
     );
-    Response putResponse = updateCompleted.get(10, TimeUnit.SECONDS);
-    return putResponse;
+    return updateCompleted.get(10, TimeUnit.SECONDS);
   }
 
   private void testGetPutDeletePost(String path, String entityId, JsonEntity entity, String updateProperty)
     throws ExecutionException,
     InterruptedException,
-    MalformedURLException,
     TimeoutException {
 
     entity.put(updateProperty, entity.getString(updateProperty) + " UPDATED");
@@ -906,9 +698,9 @@ public class ReferenceTablesTest extends TestBase {
 
     entity.put("id", entityId);
     Response postResponse1 = createReferenceRecord(path, entity);
-    if (Arrays.asList("/electronic-access-relationships", "/instance-statuses",
-      "/modes-of-issuance", "/statistical-code-types", "/holdings-types",
-      "/authority-note-types", "/authority-source-files").contains(path)) {
+    var paths = List.of("/electronic-access-relationships", "/instance-statuses",
+      "/modes-of-issuance", "/statistical-code-types", "/holdings-types");
+    if (paths.contains(path)) {
       assertThat(postResponse1.getStatusCode(), is(422));
     } else {
       assertThat(postResponse1.getStatusCode(), is(HttpURLConnection.HTTP_BAD_REQUEST));
@@ -941,9 +733,10 @@ public class ReferenceTablesTest extends TestBase {
 
     entity.put("id", "baduuid");
     Response postResponse2 = createReferenceRecord(path, entity);
-    if (Arrays.asList("/instance-note-types", "/authority-note-types", "/authority-source-files",
-      "/nature-of-content-terms").contains(path)) {
-      assertThat(postResponse2.getStatusCode(), is(422)); // unprocessable entity, fails UUID pattern
+    paths = List.of("/instance-note-types", "/nature-of-content-terms");
+    if (paths.contains(path)) {
+      // unprocessable entity, fails UUID pattern
+      assertThat(postResponse2.getStatusCode(), is(422));
     } else {
       assertThat(postResponse2.getStatusCode(), is(HttpURLConnection.HTTP_BAD_REQUEST));
     }
